[githubio] update an img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="..." alt="...">
+      <img src="http://cdn3.techbang.com.tw/system/images/157004/original/0050130b69d541b46116f23027c8ab2a.jpg?1395994552" alt="#">
       <div class="carousel-caption">
         ...
       </div>
