add introduction of my research

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
     <div class="row v-center">
         <div class="col-lg-offset-1 col-lg-2 col-md-2 col-sm-3 col-xs-4">
-            <img id="idImgHead" src="images/head.jpg" alt="" class="img-rounded" height="190" width="170">
+            <img id="idImgHead" src="images/head.jpg" alt="" class="img-rounded" height="190" width="160">
         </div>
         <div class="col-lg-9 col-md-9 col-sm-8 col-xs-7">
              <h1 id="project_title">z.sean.huang's IO Note</h1>
@@ -63,37 +63,29 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h3>
+	  <a name="welcome-to-github-pages" class="anchor" href="#my-research"><span class="octicon octicon-link"></span></a>Design and Implementation FPGA based Embedded Visual Servo System
+      </h3>
+<img src="images/p1.jpg" alt="" class="img-rounded" height="350" width="500">
+<img src="images/p2.jpg" alt="" class="img-rounded" height="350" width="500">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>My graduate research is real-time scheduling of embedded system, which is based on a FPGA development board. In this face-tracking system, there are four tasks (processes):<br><br>
+  (1.) One task to execute the image processing and locate the human face.<br>
+  (2.) Two tasks to control the angle of DC-moter, both horizontally and vertically.<br>
+  (3.) One task to record the related signal, such as motor's angle, speed, current and valtage.<br><br>
+In the field of control theory, there always has trade-off if system's computer power is limited. The purpose of this research is to plan an proper and compromised schedule, make sure all the tasks in the computer system work real-time and functionally.<br>
+and here is a simple demo of my experiment!</p>
+<br>
+<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/urRajaj6YVw" frameborder="0"> </iframe>
+<br><br>
+<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/gLxTyJu_DmI" frameborder="0"> </iframe>
 
+<!--
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+-->
       </section>
     </div>
 
