--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Z-sean-huang.github.io : for github.io index page" />
+    <meta name="description" content="z-sean-huang.github.io : for github.io index page" />
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -30,17 +30,18 @@
     		    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
     		    <ul class="dropdown-menu">
 			<li><a title="virustotal private api in python" href="#"><span >Virustotal.py</span></a></li>
-    			<li><a title="blocking malicious link and file for skype" href="#">SkypeSnort</a></li>
-    			<li><a title="server side pagination for datatables.js" href="#">SSP4datatable.js</a></li>
+    			<li><a title="skype plugin to detect malicious link and file" href="#">SkyPig</a></li>
+    			<li><a title="portal for IDS snort rule set management" href="#">Hogman</a></li>
+    			<li><a title="python lib to extract HTTP head/payload from pcap" href="#">HttpShark</a></li>
+    			<li><a title="Django+Mongodb server side pagination for datatables.js" href="#">SSP4datatable.js</a></li>
     			<li><a title="small project applying image processing to find Nemo" href="#">FindingNemo</a></li>
     		    </ul>
     		    </li>
     		    <li class="dropdown">
     		        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Document<b class="caret"></b></a>
     		        <ul class="dropdown-menu">
-    		                <li><a title="Design and implementation of FPGA based embedded visual servo system" href="#">master thesis</a></li>
-    		                <li><a href="#">resume (en)</a></li>
-    		                <li><a href="#">resume (ch)</a></li>
+    		            <li><a id="idThesis" title="Design and implementation of FPGA based embedded visual servo system" href="#">master thesis(ch)</a></li>
+    		            <li><a id="idResume" href="#">resume (en)</a></li>
     		        </ul>
     		    </li>
     	    </ul>
@@ -64,7 +65,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
       <h3>
-	  <a name="welcome-to-github-pages" class="anchor" href="#my-research"><span class="octicon octicon-link"></span></a>Design and Implementation FPGA based Embedded Visual Servo System
+	  <a class="anchor" href="#my_research"><span class="octicon octicon-link"></span></a>Graduate Research: Design and Implementation of FPGA based Embedded Visual Servo System
       </h3>
 <img src="images/p1.jpg" alt="" class="img-rounded" height="360" width="550">
 <img src="images/p2.jpg" alt="" class="img-rounded" height="360" width="550">
@@ -96,10 +97,57 @@ $ git checkout gh-pages
       </footer>
     </div>
 
+<div id="idModal" class="modal fade">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Guess What</h4>
+      </div>
+      <div class="modal-body">
+	<img src="images/guess_what.jpg">
+        <p>clever and gentle, what's this animal?</p>
+	<input id="idTextName" type="text" class="form-control" placeholder="name">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">I don't know</button>
+        <button id="idModalBtnOk" type="button" class="btn btn-primary">OK</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="javascripts/gibberish-aes-1.0.0.min.js"></script>
   <script>
-	  $("a").tooltip()
+      fnInit = function () {
+          $("a").tooltip()
+          $("#idResume").click(function () {
+	      $("#idModal").modal("show")
+          });
+          $("#idThesis").click(function () {
+              window.open("https://www.dropbox.com/s/m60xwi8v7jzs8e1/%E5%9F%BA%E6%96%BCFPGA%E7%9A%84%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%A6%96%E8%A6%BA%E4%BC%BA%E6%9C%8D%E7%B3%BB%E7%B5%B1%E4%B9%8B%E8%A8%AD%E8%A8%88%E8%88%87%E5%AF%A6%E7%8F%BE.pdf", "resume");
+          });
+
+          $("#idModalBtnOk").click(function () {
+              var sEncryUrl = "U2FsdGVkX185lkgiHKonR1Bbq4m7w3ZJomQaS/mMEm92oSRtooKMgI7a6Q2QHAWjaF0YSYI9s5ATrFW/1Q8NaYQe1hwTbSWbJDYCum7kaL8IwHENZhzJNW1xeJVKjQ8p";
+	      try {
+	          var sUrl = GibberishAES.dec(sEncryUrl, $("#idTextName").val());
+                  $("#idModal").modal("hide");
+                  window.open(sUrl, "resume");
+	      } catch (e) {
+		  $("#idTextName").attr("placeholder", "sorry, please retry again!")
+		  $("#idTextName").val("")
+              }
+          })
+          $("#idTextName").keyup(function (event) {
+              if (event.keyCode == 13){
+                  $("#idModalBtnOk").click();
+              }
+          });
+      }
+      $(fnInit())
   </script>
   </body>
 </html>
