--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ $ git checkout gh-pages
                   $("#idModal").modal("hide");
                   window.open(sUrl, "resume");
 	      } catch (e) {
-		  $("#idTextName").attr("placeholder", "sorry, please retry again!")
+		  $("#idTextName").attr("placeholder", "sorry, please try again!")
 		  $("#idTextName").val("")
               }
           })
