[githubio] fix type and appy fa-icon

--- a/index.html
+++ b/index.html
@@ -1,153 +1,148 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
+<head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="z-sean-huang.github.io : for github.io index page" />
+    <meta name="description" content="z-sean-huang.github.io" />
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>z.sean.huang's blog</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
+    <title>z.sean.huang's I/O</title>
+</head>
+<body>
     <nav class="navbar navbar-inverse" role="navigation">
-      <div class="container-fluid">
-	      <!--
-        <div class="navbar-header">
-          <a class="navbar-brand active" href="#">Home</a>
-        </div>
-	-->
+    <div class="container-fluid">
         <div class="collapse navbar-collapse">
-    	    <ul class="nav navbar-nav">
-    		    <li class="active"><a href="#">Home</a></li>
-    		    <li><a href="#">About</a></li>
-    		    <li><a href="http://www.facebook.com/z.sean.huang">Blog</a></li>
-    		    <li class="dropdown">
-    		    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
-    		    <ul class="dropdown-menu">
-			<li><a title="virustotal private api in python" href="#"><span >Virustotal.py</span></a></li>
-    			<li><a title="skype plugin to detect malicious link and file" href="#">SkyPig</a></li>
-    			<li><a title="portal for IDS snort rule set management" href="#">Hogman</a></li>
-    			<li><a title="python lib to extract HTTP head/payload from pcap" href="#">HttpShark</a></li>
-    			<li><a title="Django+Mongodb server side pagination for datatables.js" href="#">SSP4datatable.js</a></li>
-    			<li><a title="small project applying image processing to find Nemo" href="#">FindingNemo</a></li>
-    		    </ul>
-    		    </li>
-    		    <li class="dropdown">
-    		        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Document<b class="caret"></b></a>
-    		        <ul class="dropdown-menu">
-    		            <li><a id="idThesis" title="Design and implementation of FPGA based embedded visual servo system" href="#">master thesis(ch)</a></li>
-    		            <li><a id="idResume" href="#">resume (en)</a></li>
-    		        </ul>
-    		    </li>
-    	    </ul>
-    	    <ul class="nav navbar-nav navbar-right">
-	            <li><a id="forkme_banner" href="https://github.com/z-sean-huang">View on GitHub</a></li>
-    	    </ul>
+            <ul class="nav navbar-nav">
+                <li title="Home" class="active"><a href="#"><i class="fa fa-home fa-1g"></i></a></li>
+                <li title="About"><a href="#"><i class="fa fa-user fa-1g"></i></a></li>
+                <li title="Social" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users fa-1g"></i><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="http://www.facebook.com/z.sean.huang"><i class="fa fa-facebook-square"></i>Facebook</a></li>
+                        <li class="disabled"><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
+                    </ul>
+                </li>
+                <li title="Projects" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-code"></i><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li class="disabled"><a title="virustotal private api in python" href="#">Virustotal.py</a></li>
+                        <li class="disabled"><a title="skype plugin to detect malicious link and file" href="#">SkyPig</a></li>
+                        <li class="disabled"><a title="portal for IDS snort rule set management" href="#">Hogman</a></li>
+                        <li class="disabled"><a title="python lib to extract HTTP head/payload from pcap" href="#">HttpShark</a></li>
+                        <li class="disabled"><a title="Django+Mongodb server side pagination for datatables.js" href="#">SSP4datatable.js</a></li>
+                        <li class="disabled"><a title="small project applying image processing to find Nemo" href="#">FindingNemo</a></li>
+                    </ul>
+                </li>
+                <li title="Files" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-file"></i><b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a id="idThesis" title="Design and implementation of FPGA based embedded visual servo system" href="#">master thesis(ch)</a></li>
+                    <li><a id="idResume" href="#">resume (en)</a></li>
+                </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a id="forkme_banner" href="https://github.com/z-sean-huang">View on GitHub</a></li>
+            </ul>
         </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-      </nav>
-    <div class="row v-center">
-        <div class="col-lg-offset-1 col-lg-2 col-md-2 col-sm-3 col-xs-4">
-            <img id="idImgHead" src="images/head.jpg" alt="" class="img-rounded" height="190" width="160">
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-8 col-xs-7">
-             <h1 id="project_title">z.sean.huang's IO Note</h1>
-             <h2 id="project_tagline">hello, world! here's about a software engineer's experience and his technical note.</h2>
+    </div><!-- /.container-fluid -->
+    </nav>
+    <div class="container-fluid">
+        <div class="row v-center">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                <img id="idImgHead" src="images/head.jpg" alt="" class="img-rounded" height="190" width="160">
+            </div>
+            <div class="col-lg-8 col-md-9 col-sm-8 col-xs-7">
+                <h1 id="project_title">z.sean.huang's I/O</h1>
+                <h2 id="project_tagline">hello, world! Just want to share my passion and technical experience.</h2>
+            </div>
         </div>
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-      <h3>
-	  <a class="anchor" href="#my_research"><span class="octicon octicon-link"></span></a>Graduate Research: Design and Implementation of FPGA based Embedded Visual Servo System
-      </h3>
-<img src="images/p1.jpg" alt="" class="img-rounded" height="360" width="550">
-<img src="images/p2.jpg" alt="" class="img-rounded" height="360" width="550">
+    <div class="container">
+        <section id="main_content" class="inner">
+        <h3>
+            <a class="anchor" href="#my_research"><span class="octicon octicon-link"></span></a>Graduate Research: Design and Implementation of FPGA based Embedded Visual Servo System
+        </h3>
+        <img src="images/p1.jpg" alt="" class="img-rounded" height="360" width="550">
+        <img src="images/p2.jpg" alt="" class="img-rounded" height="360" width="550">
 
-<p>My graduate research is real-time scheduling of embedded system, which is based on a FPGA development board. In this face-tracking system, there are four tasks (processes):<br><br>
-  (1.) One task to execute the image processing and locate the human face.<br>
-  (2.) Two tasks to control the angle of DC-moter, both horizontally and vertically.<br>
-  (3.) One task to record the related signal, such as motor's angle, speed, current and valtage.<br><br>
-In the field of control theory, there always has trade-off if system's computer power is limited. The purpose of this research is to plan an proper and compromised schedule, make sure all the tasks in the computer system work real-time and functionally.<br>
-and here is a simple demo of my experiment!</p>
-<br>
-<iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/urRajaj6YVw" frameborder="0"> </iframe>
-<br><br>
-<iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/gLxTyJu_DmI" frameborder="0"> </iframe>
-
-<!--
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
--->
-      </section>
-    </div>
+        <p>My graduate research is real-time scheduling of embedded system, which is based on a FPGA development board. In this face-tracking system, there are four tasks (processes):<br><br>
+        (1.) One task to execute the image processing and locate the human face.<br>
+        (2.) Two tasks to control the angle of DC-motor, both horizontally and vertically.<br>
+        (3.) One task to record the related signal, such as motor's angle, speed, current and voltage.<br><br>
+        In the field of control theory, there always has trade-off if system's computer power is limited. The purpose of this research is to plan an proper and compromised schedule, make sure all the tasks in the computer system work real-time and functionally.<br>
+        <br>
+        Here is a simple demo of my experiment!</p>
+        <br>
+        <iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/urRajaj6YVw" frameborder="0"> </iframe>
+        <br><br>
+        <iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/gLxTyJu_DmI" frameborder="0"> </iframe>
+        </section>
+    </div> <!-- END container -->
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
+        <footer class="inner">
         <p>Published by z.sean.huang <a href="http://github.com/z-sean-huang/">Sean's GitHub Page</a></p>
-      </footer>
+        </footer>
     </div>
 
-<div id="idModal" class="modal fade">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Guess What</h4>
-      </div>
-      <div class="modal-body">
-	<img src="images/guess_what.jpg">
-        <p>clever and gentle, what's this animal?</p>
-	<input id="idTextName" type="text" class="form-control" placeholder="name">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">I don't know</button>
-        <button id="idModalBtnOk" type="button" class="btn btn-primary">OK</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    <div id="idModal" class="modal fade">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Guess What</h4>
+                </div>
+                <div class="modal-body">
+                    <img src="images/guess_what.jpg">
+                    <p>clever and gentle, what's this animal?</p>
+                    <input id="idTextName" type="text" class="form-control" placeholder="name">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">I don't know</button>
+                    <button id="idModalBtnOk" type="button" class="btn btn-primary">OK</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
-  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-  <script src="javascripts/gibberish-aes-1.0.0.min.js"></script>
-  <script>
-      fnInit = function () {
-          $("a").tooltip()
-          $("#idResume").click(function () {
-	      $("#idModal").modal("show")
-          });
-          $("#idThesis").click(function () {
-              window.open("https://www.dropbox.com/s/m60xwi8v7jzs8e1/%E5%9F%BA%E6%96%BCFPGA%E7%9A%84%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%A6%96%E8%A6%BA%E4%BC%BA%E6%9C%8D%E7%B3%BB%E7%B5%B1%E4%B9%8B%E8%A8%AD%E8%A8%88%E8%88%87%E5%AF%A6%E7%8F%BE.pdf", "resume");
-          });
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="javascripts/gibberish-aes-1.0.0.min.js"></script>
+    <script>
+        fnInit = function () {
+            $("a").tooltip();
+            $("li").tooltip({"placement":"bottom"});
+            $("#idResume").click(function () {
+                $("#idModal").modal("show")
+            });
+            $("#idThesis").click(function () {
+                window.open("https://www.dropbox.com/s/m60xwi8v7jzs8e1/%E5%9F%BA%E6%96%BCFPGA%E7%9A%84%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%A6%96%E8%A6%BA%E4%BC%BA%E6%9C%8D%E7%B3%BB%E7%B5%B1%E4%B9%8B%E8%A8%AD%E8%A8%88%E8%88%87%E5%AF%A6%E7%8F%BE.pdf", "resume");
+            });
 
-          $("#idModalBtnOk").click(function () {
-              var sEncryUrl = "U2FsdGVkX185lkgiHKonR1Bbq4m7w3ZJomQaS/mMEm92oSRtooKMgI7a6Q2QHAWjaF0YSYI9s5ATrFW/1Q8NaYQe1hwTbSWbJDYCum7kaL8IwHENZhzJNW1xeJVKjQ8p";
-	      try {
-	          var sUrl = GibberishAES.dec(sEncryUrl, $("#idTextName").val());
-                  $("#idModal").modal("hide");
-                  window.open(sUrl, "resume");
-	      } catch (e) {
-		  $("#idTextName").attr("placeholder", "sorry, please try again!")
-		  $("#idTextName").val("")
-              }
-          })
-          $("#idTextName").keyup(function (event) {
-              if (event.keyCode == 13){
-                  $("#idModalBtnOk").click();
-              }
-          });
-      }
-      $(fnInit())
-  </script>
-  </body>
+            $("#idModalBtnOk").click(function () {
+                var sEncryUrl = "U2FsdGVkX185lkgiHKonR1Bbq4m7w3ZJomQaS/mMEm92oSRtooKMgI7a6Q2QHAWjaF0YSYI9s5ATrFW/1Q8NaYQe1hwTbSWbJDYCum7kaL8IwHENZhzJNW1xeJVKjQ8p";
+                try {
+                    var sUrl = GibberishAES.dec(sEncryUrl, $("#idTextName").val());
+                    $("#idModal").modal("hide");
+                    window.open(sUrl, "resume");
+                    } catch (e) {
+                    $("#idTextName").attr("placeholder", "sorry, please try again!")
+                    $("#idTextName").val("")
+                }
+            })
+            $("#idTextName").keyup(function (event) {
+                if (event.keyCode == 13){
+                    $("#idModalBtnOk").click();
+                }
+            });
+        }
+        $(fnInit())
+    </script>
+</body>
 </html>
