[githubio] - fix typo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li title="Projects" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-code"></i><b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a title="virustotal public api in python" href="https://github.com/z-sean-huang/VirsutotalAPI2">VisualtotalAPI2.py</a></li>
+                        <li><a title="virustotal public api in python" href="https://github.com/z-sean-huang/VirsutotalAPI2">VirustotalAPI2.py</a></li>
                         <li class="disabled"><a title="skype plugin to detect malicious link and file" href="#">SkyPig</a></li>
                         <li class="disabled"><a title="portal for IDS snort rule set management" href="#">Hogman</a></li>
                         <li class="disabled"><a title="python lib to extract HTTP head/payload from pcap" href="#">HttpShark</a></li>
