--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
 </head>
 <body>
     <nav class="navbar navbar-inverse" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+              <a class="navbar-brand" href="#" title="Home"><i class="fa fa-home fa-1g"></i></a>
+        </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <!--
                 <li title="Home" class="active"><a href="#"><i class="fa fa-home fa-1g"></i></a></li>
+                -->
                 <li title="About"><a href="#"><i class="fa fa-user fa-1g"></i></a></li>
                 <li title="Social" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users fa-1g"></i><b class="caret"></b></a>
@@ -50,7 +61,7 @@
     </div><!-- /.container-fluid -->
     </nav>
     <div class="container-fluid">
-        <div class="row v-center">
+        <div id="idDivHead" class="row v-center">
             <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
                 <img id="idImgHead" src="images/head.jpg" alt="" class="img-rounded" height="190" width="160">
             </div>
@@ -63,12 +74,13 @@
 
     <!-- MAIN CONTENT -->
     <div class="container">
-        <section id="main_content" class="inner">
+        <div class="row">
+        <div class="col-md-offset-2 col-md-7 col-sm-12">
         <h3>
-            <a class="anchor" href="#my_research"><span class="octicon octicon-link"></span></a>Graduate Research: Design and Implementation of FPGA based Embedded Visual Servo System
+            Graduate Research: Design and Implementation of FPGA based Embedded Visual Servo System
         </h3>
-        <img src="images/p1.jpg" alt="" class="img-rounded" height="360" width="550">
-        <img src="images/p2.jpg" alt="" class="img-rounded" height="360" width="550">
+        <img src="images/p1.jpg" class="img-rounded" width="640">
+        <img src="images/p2.jpg" class="img-rounded" width="640">
 
         <p>My graduate research is real-time scheduling of embedded system, which is based on a FPGA development board. In this face-tracking system, there are four tasks (processes):<br><br>
         (1.) One task to execute the image processing and locate the human face.<br>
@@ -78,10 +90,11 @@
         <br>
         Here is a simple demo of my experiment!</p>
         <br>
-        <iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/urRajaj6YVw" frameborder="0"> </iframe>
+        <iframe class="youtube-player" type="text/html" width="640" src="http://www.youtube.com/embed/urRajaj6YVw" frameborder="0"> </iframe>
         <br><br>
-        <iframe class="youtube-player" type="text/html" width="550" height="360" src="http://www.youtube.com/embed/gLxTyJu_DmI" frameborder="0"> </iframe>
-        </section>
+        <iframe class="youtube-player" type="text/html" width="640" src="http://www.youtube.com/embed/gLxTyJu_DmI" frameborder="0"> </iframe>
+        </div>
+        </div> <!-- END row -->
     </div> <!-- END container -->
 
     <!-- FOOTER  -->
