[githubio] - put footer to right side

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
     </div> <!-- END container -->
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-        <footer class="inner">
-        <p>Published by z.sean.huang <a href="http://github.com/z-sean-huang/">Sean's GitHub Page</a></p>
+    <div id="idDivFooter">
+        <footer>
+            <p class="text-right">
+                Published by z.sean.huang <a href="http://github.com/z-sean-huang/">Sean's GitHub Page</a>
+            </p>
         </footer>
     </div>
 
