[githubio] - fix wrong word

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 (1.) One task to execute the image processing and locate the human face.<br>
                 (2.) Two tasks to control the angle of DC-motor, both horizontally and vertically.<br>
                 (3.) One task to record the related signal, such as motor's angle, speed, current and voltage.<br><br>
-                In the field of control theory, there always has trade-off if system's computer power is limited. The purpose of this research is to plan an proper and compromised schedule, make sure all the tasks in the computer system work real-time and functionally.<br>
+                In the field of control theory, there always has trade-off if system's computing power is limited. The purpose of this research is to plan an proper and compromised schedule, make sure all the tasks in the computer system work real-time and functionally.<br>
                 <br>
                 Here is a simple demo of my experiment!</p>
                 <br>
@@ -152,7 +152,7 @@
         <h3 class="title"></h3>
         <a class="prev">?</a>
         <a class="next">?</a>
-        <a class="close">¡Ñ</a>
+        <a class="close">ï¿½ï¿½</a>
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
         <!-- The modal dialog, which will be used to wrap the lightbox content -->
