[githubio] - disable resume btn

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-file"></i><b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a id="idThesis" title="Design and implementation of FPGA based embedded visual servo system" href="#">master thesis(ch)</a></li>
-                    <li><a id="idResume" href="#">resume (en)</a></li>
+                    <li class="disabled"><a id="idResume" href="#">resume (en)</a></li>
                 </ul>
                 </li>
             </ul>
