--- a/index.html
+++ b/index.html
@@ -190,9 +190,11 @@
         fnInit = function () {
             $("a").tooltip();
             $("li").tooltip({"placement":"bottom"});
+            /* -- disable resume btn
             $("#idResume").click(function () {
                 $("#idModal").modal("show")
             });
+            */
             $("#idThesis").click(function () {
                 window.open("https://www.dropbox.com/s/m60xwi8v7jzs8e1/%E5%9F%BA%E6%96%BCFPGA%E7%9A%84%E5%B5%8C%E5%85%A5%E5%BC%8F%E8%A6%96%E8%A6%BA%E4%BC%BA%E6%9C%8D%E7%B3%BB%E7%B5%B1%E4%B9%8B%E8%A8%AD%E8%A8%88%E8%88%87%E5%AF%A6%E7%8F%BE.pdf", "resume");
             });
